--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
           DOWNLOAD: ${{ env.release_module_url }}
 
       - name: Create zip archive
-        run: zip -r ./module.zip module.json *.js *.css *.png *.jpg *.webp *.pdf packs/ templates/ module/ lang/ doc/
+        run: zip -r ./module.zip module.json *.js *.css *.png *.jpg *.webp *.pdf src/ styles/ templates/
 
       - name: Update release with files
         id: create_version_release
