--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,16 +4,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "run Foundry 11",
-            "type": "shell",
-            "command": "node resources/app/main.js --dataPath=/projects/foundry-dev11",
-            "options": {
-                "cwd": "c:\\projects\\foundry11"
-            },
-            "problemMatcher": []
-        },
-        {
-            "label": "Surface - run Foundry 11",
+            "label": "Run Foundry",
             "type": "shell",
             "command": "node resources/app/main.js --dataPath=/p/foundry-dev11",
             "options": {
